--- a/css/index_estilo.css
+++ b/css/index_estilo.css
@@ -12,15 +12,12 @@ body {
 
 header {
     overflow-x: hidden;
-    background-color: #271b1b;
+    background-image: url("../img/logo3.JPG");
+    background-size: cover; /* Ajustar el tamaño de la imagen para cubrir el fondo */
+    background-position: center; /* Centrar la imagen de fondo */
     color: #fff;
     text-align: center;
-    padding: 2% 0;
-}
-
-header h1 {
-    margin-left: 40%;
-    font-style: italic;
+    padding: 4% 0;
 }
 
 nav {
@@ -191,7 +188,7 @@ select {
   
   /* Estilos para el menú desplegable */
   .menu {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: -200px; /* Inicialmente, el menú estará oculto fuera del lateral izquierdo */
     width: 200px;
@@ -201,12 +198,13 @@ select {
     padding: 0;
     margin: 0;
     transition: left 0.3s ease-in-out;
+    z-index: 100;
   }
   
   /* Estilos para mostrar el menú */
   .menu.show {
     left: 0;
-    height: 100%;
+    height: 100vh;
     background-color: gray;
   }
 
