--- a/css/index_estilo.css
+++ b/css/index_estilo.css
@@ -232,4 +232,14 @@ select {
         padding: 10px;
         overflow-x: hidden;
     }
+    header {
+    overflow-x: hidden;
+    position: relative;
+    background-image: url("../img/logo.JPG");
+    background-size: cover; /* Ajustar el tamaño de la imagen para cubrir el fondo */
+    background-position: center; /* Centrar la imagen de fondo */
+    color: #fff;
+    text-align: center;
+    padding: 8% 0;
+}
 }
