--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,6 +11,56 @@ body {
     height: 100vh;
 }
 
+/* Estilos para la franja superior */
+.franja-superior {
+  background-color: #007bff;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000; /* Asegura que esté por encima de otros elementos */
+}
+
+/* Estilos para el mensaje de información */
+.info {
+  margin-left: 10px; /* Espacio entre el mensaje y los enlaces */
+  font-weight: bold;
+  font-size: 16px;
+}
+
+/* Estilos para el enlace de Instagram */
+.enlace-instagram {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  margin-right: 10px;
+  cursor: pointer; /* Cambia el cursor al pasar el ratón sobre él */
+  transition: text-decoration 0.3s; /* Agrega una transición de suavizado al subrayado */
+}
+
+.enlace-instagram:hover {
+  text-decoration: underline; /* Subraya el enlace al pasar el ratón sobre él */
+}
+
+/* Estilos para el número de teléfono */
+.numero-telefono {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer; /* Cambia el cursor al pasar el ratón sobre él */
+  transition: text-decoration 0.3s; /* Agrega una transición de suavizado al subrayado */
+}
+
+.numero-telefono:hover {
+  text-decoration: underline; /* Subraya el número de teléfono al pasar el ratón sobre él */
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -36,24 +86,52 @@ body {
 
   .botones-container{
     position: absolute;
-    top: 36%;
-    left: 5%;
-    background-color: rgb(206, 206, 230);
+    top: 20%;
+    left: 2%;
 		width: 25%;
 		padding: 5px 20px 20px 20px;
 		border-radius: 10px;
     text-align: center;
+    font-style: italic;
+    color: white;
   }
   .botones-container2{
     position: absolute;
-    top: 39%;
-    right: 5%;
-    background-color: rgb(206, 206, 230);
+    top: 60%;
+    right: 2%;
 		width: 25%;
 		padding: 5px 20px 20px 20px;
 		border-radius: 10px;
     text-align: center;
+    font-style: italic;
+    color: white;
   }
+
+  #triangulo-izquierdo {
+    width: 0;
+    height: 0;
+    border-left: 50vw solid transparent;
+    border-bottom: 100vh solid #007bff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    clip-path: polygon(0% 0%, 100% 0%, 0% 100%);
+    z-index: -1;
+    background-color: red;
+}
+
+#triangulo-derecho {
+    width: 0;
+    height: 0;
+    border-right: 50vw solid transparent;
+    border-top: 100vh solid #ff0000;
+    position: absolute;
+    top: 0;
+    right: 0;
+    clip-path: polygon(100% 0%, 100% 100%, 0% 100%);
+    z-index: -1;
+    background-color: black;
+}
 
   @keyframes vibration {
     0% {
@@ -93,26 +171,26 @@ body {
     }
     .botones-container{
       position: absolute;
-      top: 36%;
-      left: 5%;
-      animation: vibration 1.5s linear infinite;
-      background-color: rgb(206, 206, 230);
+      top: 20%;
+      left: 2%;
       width: 25%;
       padding: 2px 10px 10px 10px;
       border-radius: 5px;
       text-align: center;
       font-size: 10px;
+      font-style: italic;
+      color: white;
     }
     .botones-container2{
       position: absolute;
-      top: 39%;
-      right: 5%;
-      animation: vibration 1.5s linear infinite;
-      background-color: rgb(206, 206, 230);
+      top: 60%;
+      right: 2%;
       width: 25%;
       padding: 2px 10px 10px 10px;
       border-radius: 5px;
       text-align: center;
       font-size: 10px;
+      font-style: italic;
+      color: white;
     }
   }
