--- a/css/torneos_style.css
+++ b/css/torneos_style.css
@@ -14,7 +14,6 @@ header {
     overflow-x: hidden;
     position: relative;
     background-image: url("../img/logo.JPG");
-    /*background-size: cover; /* Ajustar el tamaño de la imagen para cubrir el fondo */
     background-position: center; /* Centrar la imagen de fondo */
     color: #fff;
     text-align: center;
@@ -55,6 +54,7 @@ nav ul li a {
     color: #fff;
     text-decoration: none;
     padding: 2% 4%;
+    cursor: pointer;
 }
 
 nav ul li a:hover {
@@ -249,8 +249,8 @@ select {
     overflow-x: hidden;
     position: relative;
     background-image: url("../img/logo.JPG");
-    background-size: cover; /* Ajustar el tamaño de la imagen para cubrir el fondo */
-    background-position: center; /* Centrar la imagen de fondo */
+    background-size: cover;
+    background-position: center;
     color: #fff;
     text-align: center;
     padding: 3% 0;
