--- a/css/torneos_style.css
+++ b/css/torneos_style.css
@@ -14,16 +14,61 @@ header {
     overflow-x: hidden;
     position: relative;
     background-image: url("../img/logo.JPG");
-    background-position: center; /* Centrar la imagen de fondo */
-    color: #fff;
+    background-position: center;
+    background-size: cover;
     text-align: center;
-    padding: 6% 0%;
+    padding: 3.33% 0;
 }
 
+/*Imagen poster*/
 .post-img {
     width: 500px;
     height: 700px;
 }
+/*Imagen ampliada*/
+/* Estilos para el contenedor de la imagen modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
+  }
+  
+  /* Estilos para el contenido de la imagen modal */
+  .modal-contenido {
+    margin: auto;
+    display: block;
+    max-width: 80%;
+    max-height: 80%;
+  }
+  
+  /* Estilos para el botón de cerrar en la imagen modal */
+  .cerrar {
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+  }
+  
+  .cerrar:hover,
+  .cerrar:focus {
+    color: #f44336;
+  }
+  
+  /* Estilos para el enlace que muestra la imagen modal */
+  .post-img {
+    cursor: pointer;
+  }
+
 
 b {
     font-size: 16px;
@@ -229,14 +274,34 @@ select {
   }
   
 
+/*Flecha para subir al inicio*/
+#scroll-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    z-index: 99;
+  }
+  
+  #scroll-to-top a {
+    background-color: #007bff;
+    color: #fff;
+    font-size: 24px;
+    padding: 10px;
+    border-radius: 50%;
+    text-decoration: none;
+  }
+  
+  #scroll-to-top a:hover {
+    background-color: #0056b3;
+  }
 
 
 /* Pie de página */
 .footer {
     text-align: center;
-    padding: 10px;
-    color: #fff;
-    background-color: #333;
+    font-size: 12px;
+    color: #050404;
 }
 
 /* Media Queries para hacer la página responsive */
@@ -245,18 +310,15 @@ select {
         padding: 10px;
         overflow-x: hidden;
     }
-    header {
-    overflow-x: hidden;
-    position: relative;
-    background-image: url("../img/logo.JPG");
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    text-align: center;
-    padding: 3% 0;
-        }
     .post-img{
         height: 400px;
         width: 300px;
+    }
+    .modal-contenido {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    .footer{
+        font-size: 8pxd;
     }
 }
