--- a/css/contacto_style.css
+++ b/css/contacto_style.css
@@ -35,7 +35,6 @@ nav ul {
 
 nav ul li {
     display: inline-block;
-    margin-left: 2%;
 }
 
 nav ul li a {
@@ -154,10 +153,10 @@ nav ul li a:hover {
   .menu {
     position: fixed;
     top: 0;
-    left: -200px; /* Inicialmente, el menú estará oculto fuera del lateral izquierdo */
-    width: 200px;
-    height: 100vh;
-    background-color: gray;
+    left: -100%; /* Inicialmente, el menú estará oculto fuera del lateral izquierdo */
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 0.9);
     list-style: none;
     padding: 0;
     margin: 0;
@@ -168,8 +167,9 @@ nav ul li a:hover {
   /* Estilos para mostrar el menú */
   .menu.show {
     left: 0;
-    height: 100vh;
-    background-color: gray;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 0.9);
   }
 
   .menu li{
