--- a/css/contacto_style.css
+++ b/css/contacto_style.css
@@ -8,19 +8,23 @@ body {
     background-color: #f8f8f8;
     color: #333;
   }
-  
+
   header {
     background-color: #000;
     color: #fff;
     text-align: center;
-    padding: 1% 0%;
   }
   
   header h1 {
     margin-left: 45%;
     font-style: italic;
   }
-  nav {
+  
+  h2{
+    margin-left: 30%;
+  }
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -40,7 +44,6 @@ nav ul li {
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    padding: 2% 4%;
     cursor: pointer;
 }
 
@@ -152,21 +155,22 @@ nav ul li a:hover {
   /* Estilos para el menú desplegable */
   .menu {
     position: fixed;
-    top: 0;
-    left: -100%; /* Inicialmente, el menú estará oculto fuera del lateral izquierdo */
+    left: 0;
+    top: -300%; /* Inicialmente, el menú estará oculto fuera del lateral izquierdo */
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.9);
     list-style: none;
     padding: 0;
     margin: 0;
-    transition: left 0.3s ease-in-out;
+    transition: top 0.6s ease-in-out;
     z-index: 100;
   }
   
   /* Estilos para mostrar el menú */
   .menu.show {
-    left: 0;
+    position: fixed;
+    top: 0;
     width: 100%;
     height: 100%;
     background-color: rgb(0, 0, 0, 0.9);
@@ -177,10 +181,28 @@ nav ul li a:hover {
     font-size: 18px;
     padding: 30px;
   }
+  .menu p{
+    font-size: 18px;
+    color: #555;
+  }
   
   @media screen and (max-width: 768px) {
+    .menu li{
+      font-style: italic;
+      font-size: 16px;
+      padding: 25px;
+    }
+  .menu p{
+      font-size: 16px;
+    }
     form {
         padding: 10px;
         overflow-x: hidden;
+    }
+    section *:not(h1){
+      margin-left: 0;
+    }
+    header h1{
+      margin-left: 40%;
     }
 }
