--- a/css/contacto_style.css
+++ b/css/contacto_style.css
@@ -104,7 +104,7 @@ nav ul li a:hover {
 .hamburger {
     position: absolute;
     top: 1%;
-    left: 3%;
+    right: 3%;
     display: block;
     width: 40px;
     height: 40px;
@@ -115,7 +115,7 @@ nav ul li a:hover {
     width: 30px;
     height: 4px;
     background-color: white;
-    margin: 6px 0;
+    margin: 4px 0;
     transition: 0.4s;
 }
 
