--- a/css/contacto_style.css
+++ b/css/contacto_style.css
@@ -42,14 +42,18 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    cursor: pointer;
+  color: #ffff;
+  text-decoration: none;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
 nav ul li a:hover {
-    background-color: #555;
-    border-radius: 5px;
+text-decoration: none; /* Quitamos el subrayado predeterminado */
+background-image: linear-gradient(to top, #007bff, #007bff); /* Color del subrayado */
+background-repeat: no-repeat;
+background-size: 100% 2px; /* Ancho y grosor del subrayado */
+background-position: 0 100%; 
 }
   
   main {
@@ -103,7 +107,7 @@ nav ul li a:hover {
   /* Estilos para las tres rayas (hamburguesa) */
 .hamburger {
     position: absolute;
-    top: 1%;
+    top: 3%;
     right: 3%;
     display: block;
     width: 40px;
@@ -203,6 +207,6 @@ nav ul li a:hover {
       margin-left: 0;
     }
     header h1{
-      margin-left: 40%;
+      margin-left: 35%;
     }
 }
