--- a/css/contacto_style.css
+++ b/css/contacto_style.css
@@ -163,12 +163,14 @@ background-position: 0 100%;
     top: -300%; /* Inicialmente, el menú estará oculto fuera del lateral izquierdo */
     width: 100%;
     height: 100%;
+    max-height: 100vh;
     background-color: rgba(0, 0, 0, 0.9);
     list-style: none;
     padding: 0;
     margin: 0;
     transition: top 0.6s ease-in-out;
     z-index: 100;
+    overflow-y: auto;
   }
   
   /* Estilos para mostrar el menú */
