--- a/css/torneos_style.css
+++ b/css/torneos_style.css
@@ -14,10 +14,12 @@ section *:not(h2) {
 }
 
 header {
+    position: fixed;
     overflow-x: hidden;
-    position: relative;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.87);
     text-align: center;
+    width: 100%;
+    z-index: 101;
 }
 
 .texto-inicio{
@@ -133,7 +135,8 @@ nav ul li a:hover {
 }
 
 main {
-    padding: 2% 5%;
+  padding: 2% 5%;
+  padding-top: 12%;
 }
 
 section {
@@ -272,12 +275,14 @@ input:focus {
     top: -300%; /* Inicialmente, el menú estará oculto fuera del lateral izquierdo */
     width: 100%;
     height: 100%;
+    max-height: 100vh;
     background-color: rgba(0, 0, 0, 0.9);
     list-style: none;
     padding: 0;
     margin: 0;
     transition: top 0.6s ease-in-out;
     z-index: 100;
+    overflow-y: auto;
   }
   
   /* Estilos para mostrar el menú */
